--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
   
-  <link rel="stylesheet" href="exp.css">
+  <link rel="stylesheet" href="styles.css">
 
   <title>Frontend Mentor | Contact form</title>
 
@@ -93,5 +93,5 @@
   </main>
   
 </body>
-<script src="exp.js6"></script>
+<script src="main.js"></script>
 </html>
